--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "vendor": "vtex",
-  "name": "minimumtheme",
-  "version": "0.1.1",
+  "vendor": "hiringcoders2021",
+  "name": "wsasouza-vtex",
+  "version": "0.0.1",
   "builders": {
     "styles": "2.x",
     "store": "0.x",
