Add: Responsive layout

--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,41 +1,87 @@
 {
   "store.home": { 
-    "blocks": [
-      "rich-text",       
-      "info-card#button-right",
-      "info-card#button-left"
+    "blocks": [      
+      "flex-layout.row",
+      "slider-layout#home",
+      "responsive-layout.desktop#desktop",
+      "responsive-layout.mobile#mobile"
+    ]
+  },  
+
+  "responsive-layout.desktop#desktop": {
+    "children": ["rich-text#desktop", "image#desktop"]
+  },  
+  "responsive-layout.mobile#mobile": {
+    "children": ["rich-text#mobile", "image#mobile"]
+  },  
+  "rich-text#desktop": {
+    "props": {
+      "text": "# Your Coffee, Your Way \n ### New Coffee Makers Collection (I'm on desktop)",
+      "textPosition": "CENTER",
+      "textAlignment": "CENTER"
+    }
+  },
+  "image#desktop": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Desktop.jpg?q=1",
+      "link": {
+        "url": "/small-appliances/coffee-makers"
+      } ,
+      "maxWidth": "100%",
+      "alt": "Coffee Makers Collection"
+    }
+  },  
+  "rich-text#mobile": {
+    "props": {
+      "text": "### Your Coffee, Your Way \n #### New Coffee Makers Collection (I'm on mobile)",
+      "textPosition": "CENTER",
+      "textAlignment": "CENTER"
+    }
+  },
+  "image#mobile": {
+    "props": {
+      "src": "https://appliancetheme.vteximg.com.br/arquivos/Responsive-Image-Mobile.jpg?q=1",
+      "link": {
+        "url": "/small-appliances/coffee-makers"
+      } ,
+      "maxWidth": "100%",
+      "alt": "Coffee Makers Collection"
+    }
+  },
+
+  "flex-layout.row":{
+    "children": [
+      "info-card#rethink",
+      "flex-layout.col"      
     ]
   },
-  "rich-text": { 
-    "props": { 
-      "text": "Hello VTEX-IO",      
-      "textPosition": "CENTER",
-      "font": "t-heading-1"
+  "flex-layout.col":{
+    "children": [
+      "image#electronics",
+      "image#major-appliance"      
+    ]
+  },
+  "info-card#rethink": {
+    "props": {
+      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/utensilios-cozinha-min.png",
+      "isFullModeStyle": true,
+      "headline": "Time to rethink your kitchen",
+      "callToActionText": "Descubra",
+      "textPosition": "center"
     }
   },
-  "info-card#button-right": {
+  "image#electronics": {
     "props": {
-      "isFullModeStyle": false,
-      "textPosition": "right",
-      "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-rosa-min.png",
-      "headline": "Vintage Pink",
-      "subhead": "Give your kitchen a boho style adding vintage apparels.<br>Available until January 2020.",
-      "callToActionMode": "button",
-      "callToActionText": "Explore",
-      "callToActionUrl": "/sale/d",
-      "textAlignment": "center"
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/electronics_banner___25d69b49f8224b369375e68513b4d593.png",
+      "maxWidth": "100%"
     }
   },
-  "info-card#button-left": {
+  "image#major-appliance": {
     "props": {
-    "isFullModeStyle": false,
-    "textPosition": "left",
-    "imageUrl": "https://appliancetheme.vteximg.com.br/arquivos/cozinha-cinza-min.png",
-    "headline": "Shining chrome TODAY",
-    "subhead": "Give your kitchen a cool style adding warm metallic finishes.<br>Available until January 2020.",
-    "callToActionMode": "link",
-    "callToActionText": "Go to collection",
-    "textAlignment": "center"
+      "src": "https://appliancetheme.vteximg.com.br/assets/vtex.file-manager-graphql/images/major_appliance_banner___bb10093866a127345ddfbcca3efa5022.png",
+      "maxWidth": "100%"
     }
   }
+
+  
 }
