--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -4,9 +4,73 @@
       "flex-layout.row",
       "slider-layout#home",
       "responsive-layout.desktop#desktop",
-      "responsive-layout.mobile#mobile"
+      "responsive-layout.mobile#mobile",
+      "tab-layout#home"
     ]
-  },  
+  },
+  
+  "tab-layout#home": {
+    "children": [
+      "tab-list#home",
+      "tab-content#home"
+    ]
+  },
+  "tab-list#home": {
+    "children": [
+      "tab-list.item#home1",
+      "tab-list.item#home2"
+      ]
+  },
+  "tab-list.item#home1": {
+    "props": {
+      "tabId": "majorAppliances",
+      "label": "Major Appliances",
+      "defaultActiveTab": true
+    }
+  },
+  "tab-list.item#home2": {
+    "props": {
+      "tabId": "electronics",
+      "label": "Electronics"
+    }
+  },
+  "tab-content#home": {
+    "children": [
+      "tab-content.item#home1",
+      "tab-content.item#home2"
+      ]
+  },
+  "tab-content.item#home1": {
+    "children": [
+      "rich-text#home1"
+    ],
+    "props": {
+      "tabId": "majorAppliances"
+    }
+  },
+  "tab-content.item#home2": {
+    "children": [
+      "rich-text#home2"
+    ],
+    "props": {
+      "tabId": "electronics"
+    }
+  },
+  "rich-text#home1": {
+    "props": {
+      "text": "Texto para Major Appliances",
+      "textPosition": "CENTER",
+      "font": "t-heading-3"
+    }
+  },
+  "rich-text#home2": {
+    "props": {
+      "text": "Texto para Electronics",
+      "textPosition": "CENTER",
+      "font": "t-heading-3"
+    }
+  },
+
 
   "responsive-layout.desktop#desktop": {
     "children": ["rich-text#desktop", "image#desktop"]
