--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -58,14 +58,14 @@
   },
   "rich-text#home1": {
     "props": {
-      "text": "Texto para Major Appliances",
+      "text": "Área do conteúdo da tab-list.item com  tabId = majorAppliances",
       "textPosition": "CENTER",
       "font": "t-heading-3"
     }
   },
   "rich-text#home2": {
     "props": {
-      "text": "Texto para Electronics",
+      "text": "Área do conteúdo da tab-list.item com  tabId = electronics",
       "textPosition": "CENTER",
       "font": "t-heading-3"
     }
