--- a/store/blocks/home.jsonc
+++ b/store/blocks/home.jsonc
@@ -1,14 +1,40 @@
 {
   "store.home": {
     "blocks": [
+      "stack-layout#cta",
       "flex-layout.row",
       "slider-layout#home",
       "responsive-layout.desktop#desktop",
       "responsive-layout.mobile#mobile",
       "tab-layout#home",
       "modal-trigger#first",
-      "list-context.product-list"
+      "list-context.product-list"      
     ]
+  },
+  "stack-layout#cta": {
+    "children": [
+      "image#cta",
+      "link#cta"
+    ]
+  },
+  "image#cta": {
+    "props": {
+      "blockClass": "cover",
+      "width": "100%",
+      "height": 400,
+      "src": "https://appliancetheme.vtexassets.com/assets/app/src/appliancecat___1b7592b49667c6a89203a0997e06bc87.jpg"
+    }
+  },
+  "link#cta": {
+    "props": {
+      "displayMode": "button",
+      "buttonProps": {
+        "variant": "primary",
+        "size": "large"
+      },
+      "href": "/red-retro-coffee-machine/p",
+      "label": "Check these awesome discounts"
+    }
   },
   "list-context.product-list": {
     "blocks": [
@@ -40,7 +66,6 @@
       "add-to-cart-button"
     ]
   },
-  
   "modal-trigger#first": {
     "children": [
       "rich-text#trigger",
